    anymore because they are not unique and predictable.
  * Change file system handling in UI.
  * Adapt 'FileSystemMgmt' RPCs to new workflow.
  * Upgrade to Debian 11.
    - Replace pam_tally2 by pam_faillock
  * Introduce environment variable OMV_POSTFIX_MAIN_DEFAULT_TRANSPORT.
    To deactivate the sending of emails without affecting the
    additional notification sinks set it to 'discard'.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 14 Dec 2020 20:28:37 +0100

openmediavault (5.6.13-1) stable; urgency=low

  * Issue #986: Divert files modified by openmediavault to prevent
    problems when package updates want to override them.
  * Issue #1058: Disable SMTPUTF8 support in Postfix. This extension
    seems not supported by all email providers. Use the environment
    variable OMV_POSTFIX_MAIN_SMTPUTF8_ENABLED to customize this
    behavior.
  * Issue 1068: Display UID/GID in user/group data tables. The columns
    are hidden by default.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 04 Jul 2021 18:55:14 +0200

openmediavault (5.6.12-1) stable; urgency=low

  * Issue #1054: The SMART device datatable is empty.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 28 Jun 2021 21:53:21 +0200

openmediavault (5.6.11-1) stable; urgency=low

  * Update locales.
  * Rsync reports submitted via email are filtered now, only the changed
    files will be listed.
  * Issue #1051: Add UDEV database entry for JMicron Mediasonic 2 bay
    enclosure. Please check changelog of 5.5.21 for more information.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 24 Jun 2021 06:47:38 +0200

openmediavault (5.6.10-1) stable; urgency=low

  * Include FQDN in local host entry.
  * Issue #1046: Fix issue in sshd_config.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 14 Jun 2021 22:14:36 +0200

openmediavault (5.6.9-1) stable; urgency=low

  * Update locales.
  * Issue #920: Add postfix throttling. The maximal number of parallel