@@ -6,9 +6,13 @@ LoadModule mod_vroot.c
   VRootLog {{ v_root_log }}
 {%- for share in config.shares.share -%}
 {%- if share.enable | to_bool -%}
-{%- set sfname = salt['omv_conf.get_sharedfolder_path'](share.sharedfolderref) -%}
-{%- set sfpath = salt['omv_conf.get_sharedfolder_name'](share.sharedfolderref) %}
-  VRootAlias "{{ sfname }}" "{{ sfpath.rstrip('/') }}"
+{%- set sfpath = salt['omv_conf.get_sharedfolder_path'](share.sharedfolderref) -%}
+{%- set sfname = salt['omv_conf.get_sharedfolder_name'](share.sharedfolderref) %}
+  VRootAlias "{{ sfpath }}" "/{{ sfname.rstrip('/') }}"
 {%- endif -%}
 {%- endfor %}
+{%- if config.homesenable | to_bool and homedir_config.enable | to_bool -%}
+{%- set sfpath = salt['omv_conf.get_sharedfolder_path'](homedir_config.sharedfolderref) %}
+  VRootAlias "{{ sfpath.rstrip('/') }}/%u/" "/%u"
+{%- endif %}
 </IfModule>
